# pacefinder

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: install-snippet.md
.github/workflows/: ci.yml  release.yml
docker/: compose.yaml
docs/: data-sources.md  development.md  download.md  troubleshooting.md
src/: cleanup.rs  cli.rs  download.rs  fs_util.rs  generate.rs  main.rs  matcher.rs  model.rs  reorder.rs  scan.rs
src/dl/: mod.rs  qbittorrent.rs
src/nfo/: kodi.rs  mod.rs  writer.rs
src/source/: cache.rs  composite.rs  mod.rs  onepacenet.rs  sheet.rs  spykernz.rs
