[package]
name = "pacefinder"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "CLI that generates Kodi-format NFOs and artwork for One Pace fan-cut media libraries."
license = "MIT"
repository = "https://github.com/TrimVis/PaceFinder"
readme = "README.md"
keywords = ["jellyfin", "plex", "kodi", "nfo", "onepace"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
directories = "6.0.0"
hex = "0.4.3"
humantime = "2.3.0"
quick-xml = { version = "0.40.1", features = ["serialize"] }
regex-lite = "0.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ureq = { version = "3.3.0", default-features = false, features = ["rustls", "gzip"] }
walkdir = "2.5.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[dev-dependencies]
tempfile = "3.27.0"
